package main.models;
import main.models.Line;

public class Answer {
    private int numOption;
    private boolean correct_option;
    private String justification;
    private Line[] lines;
}
