package main.views.components;

import main.views.components.Button;

public class Message {
    
}
