package main.views.components;

public class SingleOptionButton {
    
}
